# parakesh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_test.yml
parakesh/: Cargo.toml
parakesh-common/: Cargo.toml
parakesh-common/src/: async_queue.rs  lib.rs  pk_app.rs  pk_app_async.rs  pk_app_async2.rs  simple_queue.rs
parakesh-console-sync/: Cargo.toml
parakesh-console-sync/src/: main.rs
parakesh-ui/: Cargo.toml
parakesh-ui/src/: common.rs  main.rs  ui.rs  widget.rs
parakesh/src/: main.rs
