[package]
name = "parakesh-common"
version = "0.1.1"
description = "Common parts for ParaKesh Cashu wallet, built on CDK"
license = "MIT"
edition = "2021"


[dependencies]
cdk = "0.8.1"
cdk-common = "0.8.1"
cdk-redb = "0.8.1"
cdk-sqlite = "0.8.1"
crossbeam = "0.8.4"
futures = "0.3.31"
rand = "0.9.0"
seedstore = { version = "1.1.0", features = ["accesssecret"] }
#seedstore = { path = "../../../seedstore/seedstore" }
tokio = { version = "1.44.1", features = ["time"] }
