[package]
name = "parakesh-ui"
version = "0.2.0"
description = "Simple Cashu wallet with UI (iced-based), built on CDK"
license = "MIT"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["qr_code"] }
parakesh-common = { version = "0.2.0", path = "../parakesh-common" }
tokio = "1.44.2"
